# IBM_HACKATHON_2025

./: .gitignore  README.md
smart_malloc/: .gitignore  BEST_FIT_IMPROVEMENTS.md  BLOCK_COALESCING_IMPROVEMENTS.md  CMakeLists.txt  Makefile  Makefile.bak  PRESENTATION_GUIDE.md  README_TESTING.md  TESTING.md  THREAD_SAFETY_IMPROVEMENTS.md  allocator_comparison  allocator_comparison.cpp  coalescing_demo.cpp  defragmentation_demo.cpp  demo_extended_api  demo_extended_api.cpp  hackathon_demo.sh  memory_layout_demo.cpp  run_all_tests.sh  simple_tests  test_best_fit_demo.cpp  test_extended_api.cpp  test_protection  test_protection.cpp  test_protection_debug  test_script.txt  thread_safety_test.cpp
smart_malloc/src/: main.cpp  memory_allocator.cpp  memory_allocator.h  memory_allocator_thread_safe.cpp  production_allocator.h
smart_malloc/test/: run_tests.sh  simple_tests.cpp  testcases.txt  unit_tests.cpp
